# grec

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: playwright.yml  test.yml
backend/: Dockerfile
backend/app/: main.py  models.py
backend/app/api/: deps.py
backend/app/api/routes/: games.py  health.py  recommendations.py  steam.py
backend/app/core/: config.py  db.py
backend/app/ml/: cf_model.py  recommender.py
backend/tests/api/routes/: test_games.py  test_health.py  test_recommendations.py  test_steam.py
db/: seed.sql
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  openapi-ts.config.ts  package-lock.json  package.json  playwright.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/client/: index.ts  sdk.gen.ts  types.gen.ts
frontend/src/components/: Filter.tsx  GameCard.tsx  NavigationBar.tsx  RecommendationList.tsx  SearchBox.tsx  TagSearchBox.tsx
frontend/src/hooks/: useDebouncedQuery.ts  useProfileGames.ts  useTheme.ts
frontend/src/pages/: GamePage.tsx  HomePage.tsx  Profile.tsx  SearchGame.tsx
frontend/tests/: gamepage.spec.ts  homepage.spec.ts  profile.spec.ts  searchpage.spec.ts
notebooks/: 01_EDA.ipynb  02_feature_eng_exp.ipynb  03_collaborative_filtering.ipynb  EDA.ipynb
pipeline/: Dockerfile  collaborative_filtering.py  data_cleaning.py  feature_engineering.py  ingestion.py  run.py
src/: data_cleaning.py  feature_engineering.py  ingestion.py  main.py  preprocessing.py  recommender.py
(+1 files in other folders)
