[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "grec"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "psycopg==3.3.2",
    "pgvector==0.4.2",
    "python-dotenv==1.2.1",
    "sqlmodel==0.0.33",
]

[project.optional-dependencies]
backend = [
    "fastapi[standard]==0.129.0",
]
pipeline = [
    "kagglehub==0.4.3",
    "numpy==2.4.1",
    "pandas==2.3.3",
    "scikit-learn==1.8.0",
    "sentence-transformers==5.2.3",
    "torch",
]
dev = [
    "pytest==9.0.2",
]

[tool.setuptools.packages.find]
include = ["pipeline", "pipeline.*"]

[tool.pytest.ini_options]
pythonpath = ["backend"]

[tool.uv.sources]
torch = { index = "pytorch-cpu" } # CPU-only

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true # only torch will be fetched from this index